# edge-ai-libraries

./: README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/prompts/: run-changelog.prompt.md  run-release-notes.prompt.md
.github/skills/generate-changelog/: SKILL.md
.github/skills/generate-changelog/references/: changelog-format.md
.github/skills/generate-changelog/scripts/: extract_commits.sh
.github/skills/generate-release-notes/: SKILL.md
.github/skills/generate-release-notes/assets/: release-notes-template.md
.github/skills/security-review/: SKILL.md
.github/workflows/: dlsps-build-scans-pr-workflow.yaml  skill-scan.yaml
microservices/behavioral-analysis/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  third_party_programs_behaviour-service.txt
microservices/behavioral-analysis/config/: patterns.yaml
microservices/behavioral-analysis/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  integration-guide.md  release-notes.md  troubleshooting.md
microservices/behavioral-analysis/docs/user-guide/get-started/: build-from-source.md  configuration.md  run-container.md  run-standalone.md  system-requirements.md
microservices/behavioral-analysis/src/: ba_queue.py  config.py  main.py  pose_analyzer.py  pose_rule_engine.py  seaweedfs_client.py  vlm_client.py  yolo_pipeline.py  yolo_pose_ov.py
microservices/behavioral-analysis/tests/: test_pose_analyzer.py
microservices/metrics-manager/: Dockerfile  compose.yaml
microservices/metrics-manager/app/: capabilities.py  main.py  responses.py  routes.py
microservices/metrics-manager/docs/user-guide/: api-reference.md  get-started.md  troubleshooting.md
microservices/metrics-manager/tests/: test_main.py  test_routes.py
microservices/model-download/chart/: Chart.yaml
microservices/model-download/docker/: entrypoint.sh
microservices/model-download/docs/user-guide/: release-notes.md
microservices/multimodal-embedding-serving/: pyproject.toml
microservices/multimodal-embedding-serving/src/: wrapper.py
microservices/multimodal-embedding-serving/src/utils/: utils.py
microservices/scene-understanding-service/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  third_party_programs_scene-understanding-service.txt
microservices/scene-understanding-service/api/: routes.py
microservices/scene-understanding-service/configs/: rules.yaml  scene-config.yaml
microservices/scene-understanding-service/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  integration-contract.md  release-notes.md  troubleshooting.md
microservices/scene-understanding-service/docs/user-guide/get-started/: build-from-source.md  configuration.md  run-container.md  run-standalone.md  system-requirements.md
microservices/scene-understanding-service/models/: __init__.py  alerts.py  events.py  session.py
microservices/scene-understanding-service/rule_engine/: __init__.py  engine.py  loader.py  models.py
microservices/scene-understanding-service/services/: __init__.py  alert_service_client.py  ba_orchestrator.py  ba_queue.py  ba_visit_tracker.py  config.py  frame_capture.py  frame_manager.py  mqtt_service.py  rule_adapter.py  scenescape_client.py  session_manager.py
microservices/scene-understanding-service/tests/: test_rule_engine.py  test_session_manager.py
microservices/text-to-speech/: Dockerfile
microservices/text-to-speech/utils/: ensure_speecht5.py
sample-applications/chat-question-and-answer/: pyproject.toml
sample-applications/chat-question-and-answer-core/: pyproject.toml
sample-applications/chat-question-and-answer-core/docker/: Dockerfile  Dockerfile.ollama
sample-applications/chat-question-and-answer-core/tests/: README.md
sample-applications/chat-question-and-answer/docs/user-guide/: release-notes.md
sample-applications/chat-question-and-answer/ui/react/: package-lock.json  package.json
sample-applications/document-summarization/docs/user-guide/: release-notes.md
sample-applications/video-search-and-summarization/: setup.sh
sample-applications/video-search-and-summarization/docker/: compose.summary.yaml  compose.vllm.xpu.yaml
sample-applications/video-search-and-summarization/docs/user-guide/: get-started.md  (+1 more)
sample-applications/video-search-and-summarization/search-ms/: server.py
tools/visual-pipeline-and-platform-evaluation-tool/: compose.yml
tools/visual-pipeline-and-platform-evaluation-tool/ui/: package-lock.json
tools/visual-pipeline-and-platform-evaluation-tool/vippet/: Dockerfile
(+50 files in other folders)
