[project]
name = "chatqna-core"
version = "0.1"
description = "A monolithic chat-based question and answer system that leverages Intel's advanced Generative AI technologies and employs Retrieval-Augmented-Generation (RAG) techniques."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
	"docx2txt>=0.9,<0.10",
	"faiss-cpu>=1.11.0",
	"fastapi>=0.136.3",
	"langchain-classic==1.0.7",
	"langchain-core==1.4.5",
	"langchain-community==0.4.2",
	"pandas>=3.0.0",
	"pillow>=12.2.0",
	"pyarrow>=23.0.1",
	"pypdf>=6.10.0,<7.0.0",
	"python-multipart>=0.0.30",
	"requests>=2.34.1",
	"uvicorn>=0.21.0,<0.23.0",
]

[dependency-groups]
openvino = [
	"huggingface_hub==1.19.0",
	"langchain-huggingface==1.2.1",
	"optimum[openvino,nncf]==2.2.0",
]
ollama = [
	"langchain-ollama==1.0.1",
]
test = [
	"pytest>=9.0.3,<10.0.0",
	"pytest-cov>=6.0.0,<7.0.0",
	"pytest-mock>=3.15.0,<4.0.0",
	"coverage>=7.13.0,<8.0.0",
	"pytest-asyncio>=1.3.0,<2.0.0",
	"httpx>=0.27.2,<0.28.0",
]
cpu = [
	"torch==2.9.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
